# linuxguli16384

./: CMakeLists.txt
include/: cudalinux84.h  linux84.h  opencllinux.h  simplecudalinux84.h  updater.h
src/: linux8474
src/common/: cudalinux84.cpp  linux84.cpp  linuxdata.cpp  linuxsettings.cpp  opencllinux84.cpp  simplecudalinux84.cpp  updater.cpp
src/linux84/: linux84  main.cpp
